# KellectAgent-Windows

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
include/initialization/: initializer.h
include/output/: KafkaOutput.h  output.h
include/process/: customer_parse.h  etw_config.h  etw_configuration.h  event.h  event_parse.h  multithread_configuration.h  sub_event.h
include/sys_call_name/: cvconst.h  dia2.h
include/tools/: filter.h  logger.h  my_socket.h  providerGUID.h  providerInfo.h  rw_lock.h  term_signal.h  threadpool.h  tools.h
lib/: diaguids.lib  librdkafka.lib  librdkafkacpp.lib
release/config/: eventStruct.txt  eventStruct_win7.xml  filter.txt  initImages.txt  log.conf  propertyName.txt
source/: main.cpp
source/config/: eventStruct.txt  eventStruct.xml  eventStruct_win10.xml  filter.txt
source/initialization/: initializer.cpp
source/output/: KafkaOutput.cpp  output.cpp
source/process/: etw_config.cpp  etw_configuration.cpp  event.cpp  event_parse.cpp  get_properties.cpp  sub_event.cpp
source/tools/: easylogging++.cpp  filter.cpp  logger.cpp  my_socket.cpp  rw_lock.cpp  threadpool.cpp  tinyxml2.cpp  tools.cpp
